exports[`(.not).toHaveNotAcceptableStatus > using axios > .not.toHaveNotAcceptableStatus > fails when response have status code 406 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveNotAcceptableStatus()</intensity>

Expected status code to not be 406 received:
  <red>406</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 406,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveNotAcceptableStatus > using axios > .toHaveNotAcceptableStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveNotAcceptableStatus()</intensity>

Expected status code to be 406 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveNotAcceptableStatus > using got > .not.toHaveNotAcceptableStatus > fails when response have status code 406 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveNotAcceptableStatus()</intensity>

Expected status code to not be 406 received:
  <red>406</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 406,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveNotAcceptableStatus > using got > .toHaveNotAcceptableStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveNotAcceptableStatus()</intensity>

Expected status code to be 406 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
